2003-05-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/mkLinks: Set the var S to "" at the top
	of the file to avoid error when user has set S
	to something.
	[Tk Bug #739833]

2003-05-22  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Tcl.pbproj/project.pbxproj: added missing references to
	new source files tclPathObj.c and tclMacOSXFCmd.c.

	* macosx/tclMacOSXBundle.c: fixed a problem that caused only the
	first call to Tcl_MacOSXOpenVersionedBundleResources() for a given
	bundle identifier to succeed. This caused the tcl runtime library
	not to be found in all interps created after the inital one.
	
2003-05-19  Kevin B. Kenny  <kennykb@hippolyta>

	* unix/tclUnixTime.c: Corrected a bug in conversion of non-ASCII
	chars in the format string.

2003-05-19  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Tcl.pbproj/project.pbxproj: changed tclConfig.sh location
	in versioned framework subdirectories to be identical to location
	in framework toplevel; fixed stub library symbolic links to be
	tcl version specific.

	* unix/tclUnixTime.c: fixed typo.

2003-05-18  Kevin Kenny  <kennykb@acm.org>

	* compat/strftime.c:  Modified TclpStrftime to return its
	* generic/tclClock.c: result in UTF-8 encoding, and removed
	* mac/tclMacTime.c:   the conversion from system encoding to
	* unix/tclUnixTime.c: UTF-8 from [clock format]. Needed to
	* win/tclWinTime.c:   avoid double conversion of the timezone
	                      name on Windows systems. [Bug 624408]

2003-05-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/dde/pkgIndex.tcl:  Applied TIP #130 which provides
	* tests/winDde.test:         for unique dde server names. Added
	* win/tclWinDde.c:           some more tests. Fixes [Bug 219293]

	* doc/dde.n: Updated documentation re TIP #130.
	* tests/winDde.test: Applied patch for [Bug 738929] by KKB and
	changed to new-style tests.

2003-05-16  Kevin B. Kenny  <kennykb@acm.org>
